--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
-    "regions": [
-        "hnd1"
+    "outputDirectory": "public",
+    "builds": [
+        {
+            "src": "/api/index.php",
+            "use": "vercel-php@0.7.3"
+        }
     ],
     "rewrites": [
         {
@@ -10,16 +14,6 @@
         {
             "source": "/(.*)",
             "destination": "/api/index.php"
-        }
-    ],
-    "builds": [
-        {
-            "src": "/api/index.php",
-            "use": "vercel-php@0.7.3"
-        },
-        {
-            "src": "/public/**",
-            "use": "@vercel/static"
         }
     ],
     "env": {
